# firstagentia

./: README.md  data.py  key_param.py  main.py  pyproject.toml
lessons/02-set-up-the-environment/: L2.py
lessons/03-create-tools-for-your-agent/: L3.py
lessons/04-give-the-llm-access-to-tools/: L4.py
lessons/05-build-the-agents-decision-making-capabilities/: L5.py
lessons/06-add-memory-to-the-agent/: L6.py
