[project]
name = "01-building-ai-agents-with-mongodb"
version = "0.1.0"
description = "AI Agents with MongoDB using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0", 
    "langgraph>=0.2.0",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "pymongo==4.11.3",
    "voyageai>=0.2.0",
    "typing-extensions>=4.12.0",
    "numpy>=1.26.0,<2.0.0",
]